--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Production
 dist
-.DS_Store
+build
 server/public
+
+# Testing
+coverage
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs and editors
+.idea
+.vscode
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.tsbuildinfo
 vite.config.ts.*
+
+# Misc
+*.log
 *.tar.gz
